--- a/mystyle.css
+++ b/mystyle.css
@@ -5,18 +5,27 @@ body{
 		background-color: #00151f;
 	}
 
+h1{
+	text-align: center;
+}
 .header{
 	position: fixed;
 	border:	1px solid #ccc;
 	border-radius: 10px;
-  /*position of element */
 	top:0px;
-	left:0px;
+	left: 0px;
+	right:0px;
 	width: 100%;
 	background-color: white;
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
-
+.project1{
+	border:	1px solid #ccc;
+	border-radius: 10px;
+	background-color: white;
+	color:black;
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
 
 .main{
 	text-align: center;
@@ -27,6 +36,7 @@ a{
 	/* inherits the previous color - basically removes when you hyperlink something and turns to blue with underlines*/
 	color: inherit;
 	text-decoration: none;
+	text-align: center;
 }
 /* does something when hover'd over */
 a:hover{
@@ -37,10 +47,6 @@ img{
 	width:50%;
 	height:50%;
 }
-
-
-
-
 /* Night Mode  */
 
 body.night
