--- a/mystyle.css
+++ b/mystyle.css
@@ -8,6 +8,25 @@ body{
 h1{
 	text-align: center;
 }
+
+form { 
+    border:	1px solid #ccc;
+	border-radius: 10px;
+	background-color: white;
+	color:black;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+          
+        
+}
+input{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 21, 19);
+    border-radius: 4px;
+}
+
 .header{
 	position: fixed;
 	border:	1px solid #ccc;
@@ -30,7 +49,7 @@ h1{
 .main{
 	text-align: center;
 	padding: 16px;
-  margin-top: 30px;
+    margin-top: 30px;
 }
 a{
 	/* inherits the previous color - basically removes when you hyperlink something and turns to blue with underlines*/
@@ -47,6 +66,8 @@ img{
 	width:50%;
 	height:50%;
 }
+
+
 /* Night Mode  */
 
 body.night
